--- a/css/style.css
+++ b/css/style.css
@@ -53,13 +53,11 @@ header li a {
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-image: url('../css/images/img-mission-background.jpg');
+    background-image: url('../css/images/img-mission-background.JPEG');
     background-repeat: no-repeat;
     background-position: center;
-    border-bottom: 1px solid gray;
-    
-    
 }
+
 .first-section {
     width: 1200px;
     background-color: black;
@@ -100,7 +98,7 @@ header li a {
 .location {
     height: 500px;
     margin-top: 50px;
-    background-image: url('../css/images/img-locations-background.jpg');
+    background-image: url('../css/images/img-locations-background.JPEG');
     background-repeat: no-repeat;
     background-position: center;
     display: flex;
